TASK: Prevent the hover scrollbar from squashing content (#9)
* TASK: Prevent the hover scrollbar from squashing content
* TASK: Adjust scrollbars for IE/Edge to overlay content
* TASK: Fix auto-hiding scrollbar in browser not supporting overlay

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
@@ -91,6 +91,8 @@
     // Only show scrollbar on hover
     &:hover {
       overflow-y: auto;
+      overflow-y: overlay;
+      -ms-overflow-style: -ms-autohiding-scrollbar;
     }
 
 
